[gd_scene load_steps=8 format=3 uid="uid://b7xx8uruq3hu1"]

[ext_resource type="Script" path="res://Scenes/ShopScene/ShopScene.gd" id="1_ss3b6"]
[ext_resource type="PackedScene" uid="uid://n8elk0lcudtf" path="res://Prefabs/Deck/Deck.tscn" id="2_1bfir"]
[ext_resource type="PackedScene" uid="uid://bqmmvuexkrbkr" path="res://Prefabs/Board/Board.tscn" id="3_m8jmp"]
[ext_resource type="Texture2D" uid="uid://c3ni86xvc1n1p" path="res://icon.svg" id="3_u6e3p"]
[ext_resource type="Script" path="res://Scenes/ShopScene/HandleUpgrades.gd" id="4_4nj8i"]
[ext_resource type="PackedScene" uid="uid://be7br7hav765e" path="res://Prefabs/Tags/Tag.tscn" id="4_gqju6"]
[ext_resource type="Script" path="res://components/3DHbox/3DHbox.gd" id="7_eju46"]

[node name="ShopScene" type="Node3D" node_paths=PackedStringArray("myDeck")]
script = ExtResource("1_ss3b6")
myDeck = NodePath("Deck")

[node name="CardOptions" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.05315, -16.9578)

[node name="Hbox3D" type="Node3D" parent="CardOptions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.2977, -13.9009)
script = ExtResource("7_eju46")
spacing = Vector3(8.145, 0, 0.01)
center_align = true
rotation_angle = 0.0

[node name="Camera3D" type="Camera3D" parent="."]
projection = 1
size = 49.405

[node name="Deck" parent="." instance=ExtResource("2_1bfir")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1634, 0, 0)

[node name="Cards" parent="Deck" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.37589, 0, -4.15142)

[node name="Board" parent="." instance=ExtResource("3_m8jmp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.8677, 0, 33.6981)

[node name="HandleUpgrades" type="Node" parent="."]
script = ExtResource("4_4nj8i")

[node name="ShopLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="ShopLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="ShopLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ShopLayer/Control/MarginContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ShopLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
color = Color(0.203922, 0.203922, 0.203922, 1)

[node name="Top Row" type="HBoxContainer" parent="ShopLayer/Control/MarginContainer/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="MoneyCount" type="RichTextLabel" parent="ShopLayer/Control/MarginContainer/VBoxContainer/ColorRect/Top Row"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Money Count: "

[node name="BluePrintCount" type="RichTextLabel" parent="ShopLayer/Control/MarginContainer/VBoxContainer/ColorRect/Top Row"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "BluePrintCount"

[node name="Button" type="Button" parent="ShopLayer/Control/MarginContainer/VBoxContainer/ColorRect/Top Row"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Re Roll"

[node name="MarginContainer" type="MarginContainer" parent="ShopLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center] tags"

[node name="TagContainer" type="HBoxContainer" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="Tag" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/TagContainer" instance=ExtResource("4_gqju6")]
layout_mode = 2

[node name="Tag2" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/TagContainer" instance=ExtResource("4_gqju6")]
layout_mode = 2

[node name="Tag3" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/TagContainer" instance=ExtResource("4_gqju6")]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="ShopLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]cards"

[node name="HBoxContainer" type="HBoxContainer" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="MarginContainer3" type="MarginContainer" parent="ShopLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="ReRoll" type="Button" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "re-roll"

[node name="TextureRect" type="TextureRect" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_u6e3p")

[node name="NextRound" type="Button" parent="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Next Round"

[connection signal="pressed" from="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer/ReRoll" to="." method="_on_re_roll_pressed"]
[connection signal="pressed" from="ShopLayer/Control/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer/NextRound" to="." method="_on_next_round_pressed"]

[editable path="Deck"]
